--- a/assets/Driving.Properties
+++ b/assets/Driving.Properties
@@ -2,6 +2,7 @@
 # Map=lecture-preview.tmx
 Map=test-key-map.tmx
 # Map=easy-map.tmx
+# Map=wideRoad.tmx
 
 ###
 # Controller=controller.AIController
